gcc/testsuite/rust/rustc/ui/use/use-mod/use-mod-4.rs
use foo::self; // { dg-error ".E0432." "" { target *-*-* } }
// { dg-error ".E0432." "" { target *-*-* } .-1 }

use std::mem::self;
// { dg-error ".E0429." "" { target *-*-* } .-1 }

fn main() {}

